<resources>
    <string name="app_name">Pending Tasks</string>
    <string name="title_new_task">Nowe zadanie</string>
    <string name="nazwa_text">Nazwa</string>
    <string name="nazwa_editText_text">Wpisz nazwę</string>
    <string name="opis_text">Opis</string>
    <string name="opis_editText_text">Wpisz opis</string>
    <string name="metoda_label">Wybierz metodę: </string>
    <string name="lokalizacja">Lokalizacja</string>
    <string name="data_i_godzina">Data i godzina</string>
    <string name="data_label">Wybierz datę:</string>
    <string name="datepicker">DatePicker</string>
    <string name="data_button">Data</string>
    <string name="data_toast">Data: </string>
    <string name="time_label">Wybierz czas: </string>
    <string name="timepicker">TimePicker</string>
    <string name="time_button">Czas</string>
    <string name="time_toast">Czas: </string>
    <string name="rejestracja_label">Rejestracja</string>
    <string name="email_text">Wpisz swój e-mail</string>
    <string name="haslo_text">Wpisz swoje hasło</string>
    <string name="rejestracja_button">Zarejestruj się</string>
    <string name="logowanie_rejestracja">Zaloguj się</string>
    <string name="logowanie">Logowanie</string>
    <string name="email_edittext">Wpisz e-mail</string>
    <string name="haslo_edittext">Wpisz hasło</string>
    <string name="logowanie_button">Zaloguj się</string>
    <string name="rejestracja_logowanie">Zarejestruj się</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_wykonane">Wykonane</string>
    <string name="tab_do_zrobienia">Do Zrobienia</string>
    <string name="tab_zlecone">Zlecone</string>
    <string name="wylogowanie">Wyloguj się</string>
    <string name="create_task_button">Stwórz zadanie</string>
</resources>
